--- a/src/AddRecipeForm/AddRecipeForm.css
+++ b/src/AddRecipeForm/AddRecipeForm.css
@@ -1,90 +1,8 @@
-* {
-  box-sizing: border-box;
+.AddRecipe {
+  color: #dedede;
 }
 
-body {
-  font-family: "Open Sans", sans-serif;
-  font-size: 20px;
-  color: #444;
-  text-align: center;
-  line-height: 1.5;
-  height: 100%;
-  margin: 0;
-}
-
-nav,
-footer {
-  padding: 1% 0;
-  background-color: #aaa;
-}
-
-nav {
-  /* position: absolute; */
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 10;
-}
-
-footer {
-  display: flex;
-  align-content: flex-end;
-  width: 100%;
-  flex-direction: column;
-}
-
-header {
-  padding: 45px 15px;
-}
-
-section {
-  min-height: 200px;
-  padding: 30px 15px;
-  background-color: #bbb;
-  margin-left: 10px;
-  margin-right: 10px;
-  margin-bottom: 10px;
-  border-radius: 3px;
-}
-
-section:nth-child(even) {
-  background-color: #ddd;
-}
-
-p {
-  margin: 0 auto;
-  max-width: 650px;
-}
-
-p + p {
-  margin-top: 15px;
-}
-
-form {
-  text-align: left;
-}
-
-input,
-textarea {
-  width: 100%;
-  max-width: 500px;
-}
-
-label {
-  display: block;
-}
-
-button {
-  padding: 10px;
-  border: none;
-  border-radius: 3px;
-}
-
-button:hover {
-  background-color: #444;
-  color: whitesmoke;
-}
-
-.form-section {
-  margin-bottom: 30px;
+.AddRecipe h2,
+h3 {
+  margin-left: 18px;
 }
