--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,52 +1,39 @@
-* {
-  box-sizing: border-box;
+.App {
+  --custom-font: Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  display: grid;
+  grid-template-areas: "sidebar header" "sidebar main";
+  grid-template-columns: 1fr 2.3fr;
+  grid-template-rows: 120px 1fr;
+  min-height: 100vh;
 }
 
-body {
-  font-family: "Open Sans", sans-serif;
-  font-size: 20px;
-  color: #444;
-  text-align: center;
-  line-height: 1.5;
+.App__nav {
+  background-color: #0b1b32;
+  color: #fff;
+  grid-area: sidebar;
+  height: 100vh;
+  overflow: auto;
 }
 
-footer {
-  padding: 1% 0;
-  background-color: #aaa;
+.App__header {
+  background-color: #3e4a72;
+  color: #09d3ac;
+  font-family: var(--custom-font);
+  grid-area: header;
+  padding-left: 16px;
+  padding-top: 32px;
+  text-shadow: 2px 1px 2px black;
 }
 
-header {
-  padding: 45px 15px;
+.App__header a {
+  color: #09d3ac;
 }
 
-section {
-  min-height: 200px;
-  padding: 30px 15px;
-  background-color: #bbb;
-  border-radius: 3px;
-  margin-bottom: 5px;
-}
-
-section:nth-child(even) {
-  background-color: #ddd;
-}
-
-p {
-  margin: 0 auto;
-  max-width: 650px;
-}
-
-p + p {
-  margin-top: 15px;
-}
-
-button {
-  padding: 10px;
-  border: none;
-  border-radius: 3px;
-}
-
-button:hover {
-  background-color: #444;
-  color: whitesmoke;
+.App__main {
+  background-color: #102541;
+  grid-area: main;
+  height: calc(100vh - 120px);
+  overflow: auto;
 }
