Links to pages are working. However, need to figure out how to make '/home' the page the screen loads first. Need to get server created to test adding recipes and adding folders before adding the editRecipe component and process.

--- a/src/Recipe/Recipe.css
+++ b/src/Recipe/Recipe.css
@@ -17,10 +17,10 @@
   float: right;
   font-size: 12px;
   height: var(--recipe-button-height);
-  position: relative;
+  position: static;
   top: calc((var(--recipe-button-height) + 32px) * -1);
-  transform-origin: right bottom;
-  transform: rotate(-90deg);
+  /* transform-origin: right bottom; */
+  /* transform: rotate(-90deg); */
   width: calc(var(--recipe-height));
 }
 .Recipe__delete:hover {
