--- a/src/SecretStashForm/SecretStashForm.css
+++ b/src/SecretStashForm/SecretStashForm.css
@@ -1,20 +1,21 @@
 .SecretStash-form {
-  background-color: #1d3656;
-  color: #dedede;
+  background-color: #8a6f78;
+  color: #181417;
   padding: 16px;
   max-width: 332px;
 }
 
 .SecretStash-form label {
   display: block;
-  font-size: 16px;
+  font-size: 17px;
+  font-weight: bold;
   padding-bottom: 8px;
 }
 
 .SecretStash-form input,
 .SecretStash-form textarea,
 .SecretStash-form select {
-  font-size: 14px;
+  font-size: 17px;
   padding: 8px;
   width: 300px;
 }
@@ -31,10 +32,10 @@
 }
 
 .SecretStash-form button {
-  background-color: #010d1e;
+  background-color: rgb(27, 27, 61);
   border-radius: 4px;
   border: 0;
-  color: #cacaca;
+  color: #ffffff;
   display: block;
   font-size: 18px;
   font-weight: bold;
@@ -43,6 +44,26 @@
   text-decoration: none;
 }
 .SecretStash-form button[type="submit"]:hover {
-  background-color: #29862e;
+  background-color: #c8556a;
   color: white;
+}
+
+@media only screen and (max-width: 500px) {
+  .SecretStash-form {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    width: 85%;
+  }
+
+  .SecretStash-form input,
+  .SecretStash-form textarea,
+  .SecretStash-form select {
+    font-size: 17px;
+    padding: 8px;
+    width: 200px;
+    text-align: center;
+  }
 }
