--- a/src/AddRecipeForm/AddRecipeForm.css
+++ b/src/AddRecipeForm/AddRecipeForm.css
@@ -1,7 +1,19 @@
 .AddRecipe {
-  color: #dedede;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.AddRecipe__header {
+  color: #443843;
 }
 
 .AddRecipe h1 {
   margin-left: 18px;
+}
+
+@media only screen and (max-width: 380px) {
+  .AddRecipe h1 {
+    text-align: center;
+  }
 }
