--- a/src/CircleButton/CircleButton.css
+++ b/src/CircleButton/CircleButton.css
@@ -1,8 +1,8 @@
 .NavCircleButton {
-  background-color: #cacaca;
+  background-color: rgb(46, 46, 75);
   border-radius: 30px;
   border: 0;
-  color: black;
+  color: #ffffff;
   display: block;
   font-size: 12px;
   font-weight: bold;
