--- a/src/RecipeListNav/RecipeListNav.css
+++ b/src/RecipeListNav/RecipeListNav.css
@@ -13,13 +13,13 @@
   margin: 20px auto;
 }
 .RecipeListNav__add-folder-button:hover {
-  background-color: teal;
+  background-color: #c8556a;
   color: white;
 }
 
 .RecipeListNav__folder-link {
-  background-color: #030f1f;
-  color: #b5b3b3;
+  background-color: #8a6f78;
+  color: #ffffff;
   display: block;
   font-family: var(--custom-font);
   font-size: 20px;
@@ -27,18 +27,35 @@
   max-width: 180px;
   padding: 8px 16px;
   text-decoration: none;
+  border-radius: 3px;
 }
 .RecipeListNav__folder-link:hover {
-  color: #ffb72f;
+  color: #f5e553;
   cursor: pointer;
 }
 .RecipeListNav__folder-link.active {
-  background-color: #102541;
+  background-color: #c8556a;
 }
 
 .RecipeListNav__num-recipes {
-  color: #adadad;
+  color: #8a6f78;
   display: block;
   float: right;
-  font-size: 10px;
+  font-size: 14px;
+  font-weight: bold;
+  background-color: #ffffff;
+  padding: 4px;
+  width: 10px;
+  text-align: center;
+  border-radius: 3px;
+}
+
+@media only screen and (max-width: 500px) {
+  .RecipeListNav__folder-link {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    text-align: center;
+    align-items: center;
+  }
 }
