--- a/src/LandingPage/LandingPage.css
+++ b/src/LandingPage/LandingPage.css
@@ -1,3 +1,42 @@
+.LandingPage {
+  color: #181417;
+}
+
 .LandingPage__main {
-  color: rgb(12, 11, 11);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 10px;
+  margin: 5px;
+}
+
+.LandingPage__get-started-button-container {
+  max-width: 380px;
+  margin: 0 10px;
+}
+
+.LandingPage__get-started-button {
+  margin: 0 auto 20px;
+  font-size: 16px;
+}
+.LandingPage__get-started-button:hover {
+  background-color: #c8556a;
+  color: whitesmoke;
+}
+
+.LandingPage section {
+  background-color: #c29eaa;
+  padding: 10px;
+  margin: 8px;
+}
+
+.LandingPage section:nth-child(odd) {
+  background-color: #8a6f78;
+}
+
+@media only screen and (min-width: 1300px) {
+  .LandingPage p {
+    font-size: 16px;
+  }
 }
