--- a/src/Recipe/Recipe.css
+++ b/src/Recipe/Recipe.css
@@ -68,3 +68,19 @@
 .Recipe__title a:hover {
   color: #f5e553;
 }
+@media only screen and (max-width: 500px) {
+  .Recipe__description {
+    font-size: 16px;
+  }
+}
+
+@media only screen and (min-width: 1300px) {
+  .Recipe__delete,
+  .Recipe__edit {
+    font-size: 13px;
+  }
+
+  .Recipe__description {
+    font-size: 17px;
+  }
+}
