--- a/src/RecipePageMain/RecipePageMain.css
+++ b/src/RecipePageMain/RecipePageMain.css
@@ -10,3 +10,15 @@
   color: #181417;
   max-width: 380px;
 }
+
+@media only screen and (max-width: 500px) {
+  .RecipePageMain {
+    font-size: 16px;
+  }
+}
+
+@media only screen and (min-width: 1300px) {
+  .RecipePageMain {
+    font-size: 17px;
+  }
+}
