--- a/src/SecretStashForm/SecretStashForm.css
+++ b/src/SecretStashForm/SecretStashForm.css
@@ -2,7 +2,9 @@
   background-color: #8a6f78;
   color: #181417;
   padding: 16px;
+  margin-bottom: 40px;
   max-width: 332px;
+  border-radius: 3px;
 }
 
 .SecretStash-form label {
