--- a/src/AddFolder/AddFolder.css
+++ b/src/AddFolder/AddFolder.css
@@ -2,6 +2,17 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-evenly;
+}
+
+.AddFolder label {
+  color: #000000;
+}
+
+.AddFolder input,
+textarea {
+  border-radius: 3px;
+  margin: 5px;
 }
 
 .AddFolder h1 {
