--- a/src/Recipe/Recipe.css
+++ b/src/Recipe/Recipe.css
@@ -68,6 +68,11 @@
 .Recipe__title a:hover {
   color: #f5e553;
 }
+
+.Recipe__description {
+  color: #000000;
+}
+
 @media only screen and (max-width: 500px) {
   .Recipe__description {
     font-size: 16px;
