--- a/src/SecretStashForm/SecretStashForm.css
+++ b/src/SecretStashForm/SecretStashForm.css
@@ -69,3 +69,17 @@
     text-align: center;
   }
 }
+
+@media only screen and (min-width: 1100px) {
+  .SecretStash-form {
+    max-width: 600px;
+  }
+  .SecretStash-form input,
+  .SecretStash-form textarea,
+  .SecretStash-form select {
+    font-size: 17px;
+    padding: 8px;
+    width: 500px;
+    text-align: left;
+  }
+}
