--- a/src/Recipe/Recipe.css
+++ b/src/Recipe/Recipe.css
@@ -79,6 +79,14 @@
   }
 }
 
+@media only screen and (min-height: 1366) {
+  .Recipe {
+    max-width: 475px;
+    font-size: 25px;
+    line-height: 30px;
+  }
+}
+
 @media only screen and (min-width: 1300px) {
   .Recipe__delete,
   .Recipe__edit {
