--- a/src/RecipeListNav/RecipeListNav.css
+++ b/src/RecipeListNav/RecipeListNav.css
@@ -59,3 +59,9 @@
     align-items: center;
   }
 }
+
+@media only screen and (min-height: 1366px) {
+  .RecipeListNav__folder-link {
+    font-size: 25px;
+  }
+}
