--- a/src/RecipePageMain/RecipePageMain.css
+++ b/src/RecipePageMain/RecipePageMain.css
@@ -17,8 +17,21 @@
   }
 }
 
+@media only screen and (min-height: 1366px) {
+  .RecipePageMain__ingredients,
+  .RecipePageMain__steps {
+    max-width: 550px;
+    line-height: 30px;
+    font-size: 25px;
+  }
+}
+
 @media only screen and (min-width: 1300px) {
   .RecipePageMain {
     font-size: 17px;
+  }
+  .RecipePageMain__steps,
+  .RecipePageMain__ingredients {
+    max-width: 700px;
   }
 }
