--- a/src/RecipePageNav/RecipePageNav.css
+++ b/src/RecipePageNav/RecipePageNav.css
@@ -15,3 +15,12 @@
   width: 75px;
   writing-mode: vertical-lr;
 }
+
+@media only screen and (max-width: 669px) {
+  .RecipePageNav {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-top: 85px;
+  }
+}
